feat-drawer-right-side-login

--- a/store/blocks/desktop/components/header/01-header-navbar.jsonc
+++ b/store/blocks/desktop/components/header/01-header-navbar.jsonc
@@ -13,8 +13,8 @@
       "locale-switcher",
       "logo#main__heart",
       "minicart.v2",
-      "logo#main__Login",
-      "login"
+      /* "logo#main__Login", */
+      "login#navbar__login-desktop"
     ]
   },
   "flex-layout.col#logo-desktop": {
