--- a/store/blocks/phone/components/header/header-navbar.jsonc
+++ b/store/blocks/phone/components/header/header-navbar.jsonc
@@ -1,21 +1,22 @@
 {
-  "flex-layout.row#mobile": {
+  "flex-layout.row#phone": {
     "children": [
-      "drawer",
+      "drawer#navbar__phone-menu",
       "logo#main__logo",
-      "flex-layout.col#spacer",
+      /* "flex-layout.col#spacer", */
       /* "search-bar", */
       "logo#main__Search",
       "logo#main__heart",
       "minicart.v2",
-      "logo#main__Login"
-      /* "login" */
+      "drawer#navbar__phone-login"
+      /* "login#navbar__login-phone" */
     ],
     "props": {
       "blockClass": "main-header-mobile",
       "preventHorizontalStretch": true,
       "preserveLayoutOnMobile": true,
-      "fullWidth": true
+      "fullWidth": true,
+      "colSizing": "auto"
     }
   }
 }
