--- a/store/blocks/phone/screen/header.jsonc
+++ b/store/blocks/phone/screen/header.jsonc
@@ -3,6 +3,6 @@
     "children": ["sticky-layout#mobile"]
   },
   "sticky-layout#mobile": {
-    "children": ["flex-layout.row#mobile"]
+    "children": ["flex-layout.row#phone"]
   }
 }
