feat-add-header-menu-mobile

--- a/store/blocks/phone/components/header/header-navbar.jsonc
+++ b/store/blocks/phone/components/header/header-navbar.jsonc
@@ -12,7 +12,7 @@
       /* "login#navbar__login-phone" */
     ],
     "props": {
-      "blockClass": "main-header-mobile",
+      "blockClass": "main-header-phone",
       "preventHorizontalStretch": true,
       "preserveLayoutOnMobile": true,
       "fullWidth": true,
