feat-navbar-tow-desktop

--- a/store/blocks/desktop/components/header/02-header-navbar.two.jsonc
+++ b/store/blocks/desktop/components/header/02-header-navbar.two.jsonc
@@ -1,8 +1,5 @@
 {
-  "menu#header__phone-menu": {
-    "props": {
-      "orientation": "vertical"
-    },
+  "menu#header__desktop-menu": {
     "children": [
       "menu-item#shop",
       "menu-item#games",
