feat-adding-intelligent-search

--- a/store/blocks/desktop/components/header/01-header-navbar.jsonc
+++ b/store/blocks/desktop/components/header/01-header-navbar.jsonc
@@ -9,7 +9,7 @@
     "children": [
       "flex-layout.col#logo-desktop",
       /* "flex-layout.col#spacer", */
-      "search-bar",
+      "search-bar#header__search",
       "locale-switcher",
       "logo#main__heart",
       "minicart.v2",
