fix-login-botton-design-mobile

--- a/store/blocks/phone/components/header/login/header-menu-login.jsonc
+++ b/store/blocks/phone/components/header/login/header-menu-login.jsonc
@@ -6,8 +6,9 @@
       "emailPlaceholder": "e-mail",
       "passwordPlaceholder": "password",
       "showPasswordVerificationIntoTooltip": true,
-      "showIconProfile": true,
-      "iconLabel": "Iniciar sesión"
+      "showIconProfile": false,
+      "iconLabel": "Iniciar sesión",
+      "labelClasses": "login__label-phone"
     }
   }
 }
