fix-left-drawer-menu-options

--- a/store/blocks/global/components/header/header-menu-items.jsonc
+++ b/store/blocks/global/components/header/header-menu-items.jsonc
@@ -25,44 +25,7 @@
         "text": "JUEGOS"
       }
     },
-    "blocks": ["submenu.accordion#department__platforms"]
-  },
-  "submenu.accordion#department__platforms": {
-    "children": ["menu#department__platforms"]
-  },
-  "menu#department__platforms": {
-    "props": {
-      "orientation": "vertical"
-    },
-    "children": ["menu-item#category__steam", "menu-item#category__origin"]
-  },
-  "menu-item#category__steam": {
-    "props": {
-      "id": "category-steam",
-      "type": "custom",
-      "highlight": false,
-      "itemProps": {
-        "type": "external",
-        "href": "#",
-        "noFollow": false,
-        "tagTitle": "Steam",
-        "text": "STEAM"
-      }
-    }
-  },
-  "menu-item#category__origin": {
-    "props": {
-      "id": "category-origin",
-      "type": "custom",
-      "highlight": false,
-      "itemProps": {
-        "type": "external",
-        "href": "#",
-        "noFollow": false,
-        "tagTitle": "Origin",
-        "text": "ORIGIN"
-      }
-    }
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   },
   "menu-item#gift_cards": {
     "props": {
@@ -77,47 +40,7 @@
         "text": "TARJETAS DE REGALO"
       }
     },
-    "blocks": ["submenu.accordion#department__gift-cards"]
-  },
-  "submenu.accordion#department__gift-cards": {
-    "children": ["menu#department__gift-cards"]
-  },
-  "menu#department__gift-cards": {
-    "props": {
-      "orientation": "vertical"
-    },
-    "children": [
-      "menu-item#category__gift_cards-game",
-      "menu-item#category__e-cards"
-    ]
-  },
-  "menu-item#category__gift_cards-game": {
-    "props": {
-      "id": "category-cards-game",
-      "type": "custom",
-      "highlight": false,
-      "itemProps": {
-        "type": "external",
-        "href": "#",
-        "noFollow": false,
-        "tagTitle": "GiftCards",
-        "text": "TARJETAS DE REGALO PARA JUEGOS"
-      }
-    }
-  },
-  "menu-item#category__e-cards": {
-    "props": {
-      "id": "category-e-cards",
-      "type": "custom",
-      "highlight": false,
-      "itemProps": {
-        "type": "external",
-        "href": "#",
-        "noFollow": false,
-        "tagTitle": "Etarjetas",
-        "text": "ETARJETAS"
-      }
-    }
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   },
   "menu-item#game_points": {
     "props": {
@@ -131,7 +54,8 @@
         "tagTitle": "Puntos de juego",
         "text": "PUNTOS DE JUEGO"
       }
-    }
+    },
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   },
   "menu-item#xbox": {
     "props": {
@@ -145,7 +69,8 @@
         "tagTitle": "Xbox",
         "text": "XBOX"
       }
-    }
+    },
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   },
   "menu-item#psn": {
     "props": {
@@ -159,7 +84,8 @@
         "tagTitle": "Psn",
         "text": "PSN"
       }
-    }
+    },
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   },
   "menu-item#nintendo_online": {
     "props": {
@@ -173,7 +99,8 @@
         "tagTitle": "Nintendo online",
         "text": "NINTENDO ONLINE"
       }
-    }
+    },
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   },
   "menu-item#software": {
     "props": {
@@ -187,6 +114,7 @@
         "tagTitle": "Software",
         "text": "SOFTWARE"
       }
-    }
+    },
+    "blocks": ["submenu.accordion#department__platforms-level1"]
   }
 }
