--- a/store/blocks/desktop/components/header/02-header-navbar.two.jsonc
+++ b/store/blocks/desktop/components/header/02-header-navbar.two.jsonc
@@ -9,12 +9,15 @@
     "children": [
       "menu-item#shop",
       "menu-item#games",
-      "menu-item#gift_cards",
-      "menu-item#game_points",
+      "menu-item#gift_cards"
+      /* "menu-item#game_points",
       "menu-item#xbox",
       "menu-item#psn",
       "menu-item#nintendo_online",
-      "menu-item#software"
-    ]
+      "menu-item#software" */
+    ],
+    "props": {
+      "blockClass": "desktop__menu-items"
+    }
   }
 }
