--- a/store/blocks/global/components/home/05-home-slider-cta.jsonc
+++ b/store/blocks/global/components/home/05-home-slider-cta.jsonc
@@ -12,7 +12,7 @@
       "link#showmore__recommendations--four"
     ],
     "props": {
-      "blockClass": "home__slider--one"
+      "blockClass": "section__slider--four"
     }
   },
   "rich-text#home__slider--text--four": {
@@ -33,10 +33,12 @@
   "flex-layout.row#product__container": {
     "children": [
       "flex-layout.col#product__image",
-      "flex-layout.col#product__information"
+      "flex-layout.col#product__information",
+      "logo#product__button-like"
     ],
     "props": {
-      "preserveLayoutOnMobile": true
+      "preserveLayoutOnMobile": true,
+      "blockClass": "product__container"
     }
   },
   "flex-layout.col#product__image": {
@@ -53,7 +55,7 @@
       "product-summary-name",
       "rich-text#product__summary-region",
       "rich-text#product__summary-at",
-      "product-summary-price"
+      "product-selling-price"
     ]
   },
   "rich-text#product__summary-region": {
@@ -66,6 +68,15 @@
     "props": {
       "text": "Desde",
       "blockClass": "product__summary-at"
+    }
+  },
+  "logo#product__button-like": {
+    "props": {
+      "title": "LikeButton",
+      "url": "assets/svg/productLikeButton.svg",
+      "width": "100",
+      "height": 44.8,
+      "blockClass": "product-like-icon"
     }
   },
   "slider-layout#demo-products": {
