fix-menu-desktop-styles-responsive-1024px

--- a/store/blocks/desktop/components/header/01-header-navbar.jsonc
+++ b/store/blocks/desktop/components/header/01-header-navbar.jsonc
@@ -4,7 +4,8 @@
       "verticalAlign": "center",
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
-      "fullWidth": true
+      "fullWidth": true,
+      "blockClass": "desktop__navbar--one"
     },
     "children": [
       "flex-layout.col#logo-desktop",
