--- a/store/blocks/desktop/screen/header.jsonc
+++ b/store/blocks/desktop/screen/header.jsonc
@@ -6,7 +6,10 @@
     "children": ["flex-layout.row#header__desktop"]
   },
   "flex-layout.row#header__desktop": {
-    "children": ["flex-layout.col#header__desktop"]
+    "children": ["flex-layout.col#header__desktop"],
+    "props": {
+      "blockClass": "header__desktop"
+    }
   },
   "flex-layout.col#header__desktop": {
     "children": [
