--- a/store/blocks/phone/components/header/login.jsonc
+++ b/store/blocks/phone/components/header/login.jsonc
@@ -43,5 +43,17 @@
       "text": "Registro",
       "blockClass": "mobile__login-sign_up"
     }
+  },
+  "login#navbar__login-phone": {
+    "props": {
+      "emailAndPasswordTitle": "LOG-IN",
+      "accessCodeTitle": "Acess Code LOG-IN",
+      "emailPlaceholder": "e-mail",
+      "passwordPlaceholder": "password",
+      "showPasswordVerificationIntoTooltip": true,
+      "showIconProfile": false,
+      "iconLabel": "Iniciar sesión",
+      "labelClasses": "login__label-phone"
+    }
   }
 }
