--- a/store/blocks/phone/components/header/menu.jsonc
+++ b/store/blocks/phone/components/header/menu.jsonc
@@ -20,5 +20,20 @@
       "width": "100",
       "blockClass": "menu_logo-icon"
     }
+  },
+  "menu#header__phone-menu": {
+    "props": {
+      "orientation": "vertical"
+    },
+    "children": [
+      "menu-item#shop",
+      "menu-item#games",
+      "menu-item#gift_cards",
+      "menu-item#game_points",
+      "menu-item#xbox",
+      "menu-item#psn",
+      "menu-item#nintendo_online",
+      "menu-item#software"
+    ]
   }
 }
